crates/test-ui/ui/define_add_bad_method.stderr
error[E0277]: the trait bound `fn(_, _): MethodImplementation` is not satisfied
 --> ui/define_add_bad_method.rs
  |
  |         builder.add_method(sel!(foo), foo as fn(_, _));
  |                 ----------            ^^^^^^^^^^^^^^^ the trait `MethodImplementation` is not implemented for `fn(_, _)`
  |                 |
  |                 required by a bound introduced by this call
  |
  = help: the following other types implement trait `MethodImplementation`:
            extern "C" fn(Allocated<T>, objc2::runtime::Sel) -> objc2::__macros::RetainedReturnValue
            extern "C" fn(Allocated<T>, objc2::runtime::Sel, A) -> objc2::__macros::RetainedReturnValue
            extern "C" fn(Allocated<T>, objc2::runtime::Sel, A, B) -> objc2::__macros::RetainedReturnValue
            extern "C" fn(Allocated<T>, objc2::runtime::Sel, A, B, C) -> objc2::__macros::RetainedReturnValue
            extern "C" fn(Allocated<T>, objc2::runtime::Sel, A, B, C, D) -> objc2::__macros::RetainedReturnValue
            extern "C" fn(Allocated<T>, objc2::runtime::Sel, A, B, C, D, E) -> objc2::__macros::RetainedReturnValue
            extern "C" fn(Allocated<T>, objc2::runtime::Sel, A, B, C, D, E, F) -> objc2::__macros::RetainedReturnValue
            extern "C" fn(Allocated<T>, objc2::runtime::Sel, A, B, C, D, E, F, G) -> objc2::__macros::RetainedReturnValue
          and $N others
note: required by a bound in `ClassBuilder::add_method`
 --> $WORKSPACE/crates/objc2/src/runtime/define.rs
  |
  |     pub unsafe fn add_method<T, F>(&mut self, sel: Sel, func: F)
  |                   ---------- required by a bound in this associated function
...
  |         F: MethodImplementation<Callee = T>,
  |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `ClassBuilder::add_method`

error[E0277]: the trait bound `fn(_, _): MethodImplementation` is not satisfied
 --> ui/define_add_bad_method.rs
  |
  |         builder.add_method(sel!(foo), foo as fn(_, _));
  |                 ----------            ^^^^^^^^^^^^^^^ the trait `MethodImplementation` is not implemented for `fn(_, _)`
  |                 |
  |                 required by a bound introduced by this call
  |
  = help: the following other types implement trait `MethodImplementation`:
            extern "C" fn(Allocated<T>, objc2::runtime::Sel) -> objc2::__macros::RetainedReturnValue
            extern "C" fn(Allocated<T>, objc2::runtime::Sel, A) -> objc2::__macros::RetainedReturnValue
            extern "C" fn(Allocated<T>, objc2::runtime::Sel, A, B) -> objc2::__macros::RetainedReturnValue
            extern "C" fn(Allocated<T>, objc2::runtime::Sel, A, B, C) -> objc2::__macros::RetainedReturnValue
            extern "C" fn(Allocated<T>, objc2::runtime::Sel, A, B, C, D) -> objc2::__macros::RetainedReturnValue
            extern "C" fn(Allocated<T>, objc2::runtime::Sel, A, B, C, D, E) -> objc2::__macros::RetainedReturnValue
            extern "C" fn(Allocated<T>, objc2::runtime::Sel, A, B, C, D, E, F) -> objc2::__macros::RetainedReturnValue
            extern "C" fn(Allocated<T>, objc2::runtime::Sel, A, B, C, D, E, F, G) -> objc2::__macros::RetainedReturnValue
          and $N others
note: required by a bound in `ClassBuilder::add_method`
 --> $WORKSPACE/crates/objc2/src/runtime/define.rs
  |
  |     pub unsafe fn add_method<T, F>(&mut self, sel: Sel, func: F)
  |                   ---------- required by a bound in this associated function
...
  |         F: MethodImplementation<Callee = T>,
  |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `ClassBuilder::add_method`

error[E0277]: the trait bound `fn(_, _) -> _: MethodImplementation` is not satisfied
 --> ui/define_add_bad_method.rs
  |
  |         builder.add_method(sel!(foo), foo as fn(_, _) -> _);
  |                 ----------            ^^^^^^^^^^^^^^^^^^^^ the trait `MethodImplementation` is not implemented for `fn(_, _) -> _`
  |                 |
  |                 required by a bound introduced by this call
  |
  = help: the following other types implement trait `MethodImplementation`:
            extern "C" fn(Allocated<T>, objc2::runtime::Sel) -> objc2::__macros::RetainedReturnValue
            extern "C" fn(Allocated<T>, objc2::runtime::Sel, A) -> objc2::__macros::RetainedReturnValue
            extern "C" fn(Allocated<T>, objc2::runtime::Sel, A, B) -> objc2::__macros::RetainedReturnValue
            extern "C" fn(Allocated<T>, objc2::runtime::Sel, A, B, C) -> objc2::__macros::RetainedReturnValue
            extern "C" fn(Allocated<T>, objc2::runtime::Sel, A, B, C, D) -> objc2::__macros::RetainedReturnValue
            extern "C" fn(Allocated<T>, objc2::runtime::Sel, A, B, C, D, E) -> objc2::__macros::RetainedReturnValue
            extern "C" fn(Allocated<T>, objc2::runtime::Sel, A, B, C, D, E, F) -> objc2::__macros::RetainedReturnValue
            extern "C" fn(Allocated<T>, objc2::runtime::Sel, A, B, C, D, E, F, G) -> objc2::__macros::RetainedReturnValue
          and $N others
note: required by a bound in `ClassBuilder::add_method`
 --> $WORKSPACE/crates/objc2/src/runtime/define.rs
  |
  |     pub unsafe fn add_method<T, F>(&mut self, sel: Sel, func: F)
  |                   ---------- required by a bound in this associated function
...
  |         F: MethodImplementation<Callee = T>,
  |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `ClassBuilder::add_method`

error[E0277]: the trait bound `fn(_, _) -> _: MethodImplementation` is not satisfied
 --> ui/define_add_bad_method.rs
  |
  |         builder.add_method(sel!(foo), foo as fn(_, _) -> _);
  |                 ----------            ^^^^^^^^^^^^^^^^^^^^ the trait `MethodImplementation` is not implemented for `fn(_, _) -> _`
  |                 |
  |                 required by a bound introduced by this call
  |
  = help: the following other types implement trait `MethodImplementation`:
            extern "C" fn(Allocated<T>, objc2::runtime::Sel) -> objc2::__macros::RetainedReturnValue
            extern "C" fn(Allocated<T>, objc2::runtime::Sel, A) -> objc2::__macros::RetainedReturnValue
            extern "C" fn(Allocated<T>, objc2::runtime::Sel, A, B) -> objc2::__macros::RetainedReturnValue
            extern "C" fn(Allocated<T>, objc2::runtime::Sel, A, B, C) -> objc2::__macros::RetainedReturnValue
            extern "C" fn(Allocated<T>, objc2::runtime::Sel, A, B, C, D) -> objc2::__macros::RetainedReturnValue
            extern "C" fn(Allocated<T>, objc2::runtime::Sel, A, B, C, D, E) -> objc2::__macros::RetainedReturnValue
            extern "C" fn(Allocated<T>, objc2::runtime::Sel, A, B, C, D, E, F) -> objc2::__macros::RetainedReturnValue
            extern "C" fn(Allocated<T>, objc2::runtime::Sel, A, B, C, D, E, F, G) -> objc2::__macros::RetainedReturnValue
          and $N others
note: required by a bound in `ClassBuilder::add_method`
 --> $WORKSPACE/crates/objc2/src/runtime/define.rs
  |
  |     pub unsafe fn add_method<T, F>(&mut self, sel: Sel, func: F)
  |                   ---------- required by a bound in this associated function
...
  |         F: MethodImplementation<Callee = T>,
  |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `ClassBuilder::add_method`

error[E0277]: the trait bound `fn(_, _, _): MethodImplementation` is not satisfied
 --> ui/define_add_bad_method.rs
  |
  |         builder.add_method(sel!(foo:), foo as fn(_, _, _));
  |                 ----------             ^^^^^^^^^^^^^^^^^^ the trait `MethodImplementation` is not implemented for `fn(_, _, _)`
  |                 |
  |                 required by a bound introduced by this call
  |
  = help: the following other types implement trait `MethodImplementation`:
            extern "C" fn(Allocated<T>, objc2::runtime::Sel) -> objc2::__macros::RetainedReturnValue
            extern "C" fn(Allocated<T>, objc2::runtime::Sel, A) -> objc2::__macros::RetainedReturnValue
            extern "C" fn(Allocated<T>, objc2::runtime::Sel, A, B) -> objc2::__macros::RetainedReturnValue
            extern "C" fn(Allocated<T>, objc2::runtime::Sel, A, B, C) -> objc2::__macros::RetainedReturnValue
            extern "C" fn(Allocated<T>, objc2::runtime::Sel, A, B, C, D) -> objc2::__macros::RetainedReturnValue
            extern "C" fn(Allocated<T>, objc2::runtime::Sel, A, B, C, D, E) -> objc2::__macros::RetainedReturnValue
            extern "C" fn(Allocated<T>, objc2::runtime::Sel, A, B, C, D, E, F) -> objc2::__macros::RetainedReturnValue
            extern "C" fn(Allocated<T>, objc2::runtime::Sel, A, B, C, D, E, F, G) -> objc2::__macros::RetainedReturnValue
          and $N others
note: required by a bound in `ClassBuilder::add_method`
 --> $WORKSPACE/crates/objc2/src/runtime/define.rs
  |
  |     pub unsafe fn add_method<T, F>(&mut self, sel: Sel, func: F)
  |                   ---------- required by a bound in this associated function
...
  |         F: MethodImplementation<Callee = T>,
  |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `ClassBuilder::add_method`
